# transcribe-diarize

./: .gitignore  README.md  pyproject.toml  transcribe.py
